2003-08-26  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4 (_AC_LIBOBJ_FNMATCH): Remove AC_DEFINE of fnmatch here.
	This avoids havoc on compilers for which '#define fnmatch rpl_fnmatch'
	followed by '#define fnmatch fnmatch_posix' gives an error.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* relocatable.m4 (AC_RELOCATABLE): Use $(host) instead of @host@,
	since the substitution of @host@ may occur before the substitution of
	@SET_RELOCATABLE@.

2002-12-24  Bruno Haible  <bruno@clisp.org>

	* mbswidth.m4 (gl_MBSWIDTH): Renamed from jm_PREREQ_MBSWIDTH. Use
	onceonly macros.

2002-12-17  Bruno Haible  <bruno@clisp.org>

	* mbswidth.m4 (jm_PREREQ_MBSWIDTH): Remove checks for limits.h,
	stdlib.h, string.h.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.m4 (gl_PREREQ_MKDTEMP): New macro.
	(gt_FUNC_MKDTEMP): Invoke it. Invoke jm_AC_TYPE_UINTMAX_T instead of
	just jm_AC_HEADER_INTTYPES_H and jm_AC_HEADER_STDINT_H.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* getline.m4: Update from gnulib.
	* getndelim2.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add getndelim2.m4.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4: Replace with the version from gnulib.

2002-12-24  Bruno Haible  <bruno@clisp.org>

	* setenv.m4 (gt_FUNC_SETENV): New macro.
	(gt_CHECK_VAR_DECL): Fix quoting error that led to infinite loop in m4
	when invoked twice.
	(gt_PREREQ_SETENV, gt_PREREQ_UNSETENV): New macros, replacing old
	gt_FUNC_SETENV.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4: Replace with the version from gnulib, without
	AC_HEADER_STDBOOL.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add extensions.m4.

2003-08-08  Paul Eggert  <eggert@twinsun.com>

	* extensions.m4: New file.
	* unlocked-io.m4 (jm_FUNC_GLIBC_UNLOCKED_IO):
	Require gl_USE_SYSTEM_EXTENSIONS rather than AC_GNU_SOURCE.

2003-07-01  Paul Eggert  <eggert@twinsun.com>

	* xreadlink.m4 (gl_XREADLINK): Don't check for sys/types.h, since